--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           push: true
           # tags: ваш-логин-на-docker-hub/ваш-репозиторий-на-docker-hub:latest
-          tags: avchasovskikh/imageworkflow:v1.1
+          tags: avchasovskikh/imageworkflow:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
